✨ Enhance WebSocket and Chat functionality for multi-tenant support
- Updated `WebSocketConfig.java` to improve message handling and CORS configuration, allowing for dynamic origin resolution based on application properties.
- Enhanced `ChatController.java` to include error handling for chat operations, ensuring exceptions are properly propagated and logged.
- Refactored `WebSocketChatController.java` to streamline message sending and typing notifications, improving error handling and user feedback.
- Introduced organization-specific features in `ChatGroupRequest.java` and `ChatGroupResponse.java`, allowing chat groups to be associated with specific organizations.
- Updated repository methods in `ChatGroupRepository.java` and `MessageRepository.java` to support organization-based queries, enhancing data retrieval efficiency.
- Improved `ChatService.java` to incorporate organization context in chat group creation and management, ensuring a tailored experience for users based on their church affiliations.

These changes significantly enhance the chat and WebSocket functionalities, ensuring a more robust and user-friendly experience across the multi-tenant platform.